[package]
name = "planetmeow-rs"
version = "0.1.0"
authors = ["solarsail <newleaf.lu@gmail.com>"]

[dependencies]
rocket = "0.2.0"
rocket_codegen = "0.2.0"

r2d2 = "0.7.0"
r2d2-diesel = "0.11.0"

dotenv = "0.8.0"
lazy_static = "0.1.*"

serde = "0.9"
serde_json = "0.9"
serde_derive = "0.9"

[dependencies.diesel]
version = "0.11.0"
features = ["postgres", "chrono"]

[dependencies.diesel_codegen]
version = "0.11.0"
features = ["postgres"]

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]

[dependencies.chrono]
version = "0.3"
features = ["serde"]
